# starlight

./: .gitignore  README.md  pyproject.toml
docker/claude-code/: Dockerfile  entrypoint.sh
docker/python-agent/: Dockerfile  agent.py
examples/: 01-model-comparison.yaml  02-skill-comparison.yaml  03-regression-suite.yaml  04-grounded-summary.yaml  05-local-skill.yaml  06-github-skill.yaml  07-mcp-server.yaml  08-combined-skills.yaml  09-python-agent.yaml
starlight/: cli.py  collector.py  config.py  container.py  evaluator.py  models.py  orchestrator.py  report.py  traces.py
starlight/runtime/: __init__.py  base.py  claude_code.py  collector-config.yaml  custom.py  langchain.py
tests/fixtures/: sample-traces.json  smoke.yaml
tests/fixtures/echo-agent/: Dockerfile  run.sh
tests/integration/: conftest.py  test_full_run.py
tests/unit/: test_cli.py  test_collector.py  test_config.py  test_container.py  test_evaluator.py  test_models.py  test_orchestrator.py  test_report.py  test_traces.py
tests/unit/runtime/: test_claude_code.py  test_langchain.py
