[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starlight"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "docker>=7.0",
    "podman-py>=5.0",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
    "anthropic>=0.40",
    "rich>=13.0",
]

[project.scripts]
starlight = "starlight.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires Docker or Podman (deselect with '-m not integration')"]
